--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,11 @@
     width: 1820px;
     margin-left: 50px;
     margin-right: 50px;
+    text-align: right;
     
 }
 .footimg {
     padding: 33.5px 50px;
     height: 50px;
+
 }
